<resources>

    <string name="monke">Return to monke</string>
    //
    <string name="app_name">Juo!</string>
    <string name="title_activity_mood">MoodActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="Good">GOOD</string>
    <string name="Bad">BAD</string>
    <string name="Normal">NORMAL</string>
    <string name="feel">How did you feel today?</string>
    <string name="not">Not now</string>
    <string name="submit">Submit</string>
    <string name="Location">Input Location</string>
    <string name="Temp">Temperature *C</string>
    <string name="Humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="windSpeed">WindSpeed</string>
    <string name="btngo">GO</string>
    <string name="btnnotification">ON</string>
    <string name="remind">Notify Me</string>

    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>

    <!-- Strings for drawer menu -->
    <string name="menu_label_home">Home</string>
    <string name="menu_label_profile">Profile</string>
    <string name="menu_label_history">History</string>
    <string name="menu_label_mood">Mood</string>
    <string name="menu_label_location">Location</string>
    <string name="menu_label_settings">Settings</string>
    <string name="menu_label_about">About</string>


    <!-- Strings for LocationActivity -->
    <string name="location_activity_label">Location</string>
    <string name="hint_location">Location</string>

    <!-- Strings for MoodActivity -->
    <string name="mood_activity_label">Mood</string>
    <string name="emoji_good">&#x1F603;</string>
    <string name="emoji_bad">&#x1F641;</string>
    <string name="emoji_normal">&#x1F610;</string>
    <string name="mood_activity_message">How did you feel today?</string>

    <!-- Strings for SettingsActivity -->
    <string name="settings_activity_label">Settings</string>
    <string name="settings_error_exception">Enter a whole number or leave blank</string>
    <string name="settings_error_negative">Enter a positive number or leave blank</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_hydration_goal">Hydration goal</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_gender">Gender</string>
    <string name="hint_settings_button_1">Button 1</string>
    <string name="hint_settings_button_2">Button 2</string>
    <string name="hint_settings_button_3">Button 3</string>
    <string name="hint_settings_button_4">Button 4</string>
    <string name="save_profile_button">Save settings</string>
    <string name="settings_activity_dialog_title">Set-up</string>
    <string name="settings_activity_dialog_content">Here you can set your name, age,
        hydration goal, weight, and sex. If you don´t feel like inputting anything don\'t worry,
        we\'ll take care of it for you!</string>

    <!-- Strings for AboutActivity -->
    <string name="about_activity_label">About</string>
    <string name="about_activity_text">This application uses the library
        <a href="https://github.com/lopspower/CircularProgressBar">CircularProgressBar</a> by
        <a href="https://github.com/lopspower">Lopez Mikhael.</a> This library is available under
        the Apache 2.0 license, which can be obtained
        <a href="http://www.apache.org/licenses/LICENSE-2.0">here</a>.\n\nThis application uses the
        library
        <a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a> by
        <a href="https://github.com/PhilJay">Philipp Jahoda</a>. This library is available under
        the Apache 2.0 license, which can be obtained
        <a href="http://www.apache.org/licenses/LICENSE-2.0">here</a>.
    </string>

    <!-- Strings for MainActivity -->
    <string name="main_activity_dialog_title">Welcome!</string>
    <string name="main_activity_dialog_content">I can see this is the first time you open Juo!
        Let us guide you through the set-up. We will now take you to the settings page.</string>
    <string name="main_activity_label">Home</string>
    <string name="main_activity_intake">%d\nof %d</string>
    <string name="main_activity_extra_intake_default">0</string>
    <string name="main_activity_extra_intake">+%d</string>
    <string name="input_custom_intake">Input</string>
    <!-- Strings for weather -->
    <string name="text_view_temperature">%.1f °C\t\t\t\t\t\tH: %s%%</string>
    <string name="not_available">N/A</string>
    <string name="location_not_found">Location not found</string>
    <string name="weather_default">&#x1F30D;</string>
    <string name="thunderstorm">&#x1F329;</string>
    <string name="drizzle">&#x1F327;</string>
    <string name="rain">&#x1F326;</string>
    <string name="snow">&#x1F328;</string>
    <string name="fog">&#x1F32B;</string>
    <string name="clear_day">&#x2600;</string>
    <string name="clear_night">&#x1F311;</string>
    <string name="clouds">&#x2601;</string>

    <!-- Content descriptions -->
    <string name="menu_description">Main hamburger menu</string>
    <string name="mood_button_description">Mood button takes you to mood input</string>
    <string name="location_button_description">Location button gets current location</string>
    <string name="Notification">notification</string>

    <!-- For the visually impaired people o know the menu is open-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>