<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/activities_group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_round_home_24"
            android:title="@string/menu_label_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_round_bar_chart_24"
            android:title="@string/menu_label_history" />
        <item
            android:id="@+id/nav_mood"
            android:icon="@drawable/ic_round_mood_24"
            android:title="@string/menu_label_moods" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_round_my_location_24"
            android:title="@string/menu_label_location" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_round_settings_24"
            android:title="@string/menu_label_settings" />
    </group>

    <group
        android:id="@+id/activities_group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_round_info_24"
            android:title="@string/menu_label_about" />
    </group>
</menu>